# ai-romania-sme-digital-restructuring

./: .zenodo.json  CHANGELOG.md  CHECKSUM_POLICY.md  CITATION.cff  DATA_ACCESS.md  FILE_MANIFEST.tsv  GITHUB_RELEASE_NOTES_v2.0.1_UPDATED.md  GITHUB_UPDATE_AFTER_ZENODO_DOI.md  GITHUB_ZENODO_21245180_UPDATE_FILE_LIST.csv  Makefile  QUICKSTART.md  README.md  README_GITHUB_OVERWRITE_BROWSER_ONLY.md  REPRODUCIBILITY.md  REPRODUCTION_CERTIFICATE.md  SHA256SUMS.txt  codemeta.json  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: reproducibility-smoke-test.yml
data/metadata/: anonymisation_log.csv  claims_permission_matrix.csv  data_dictionary.csv  figure_conceptual_model_specification.csv  (+1 more)
docs/: DOI_AND_METADATA_RECONCILIATION.md  DOI_AND_VERSIONING.md  ethics_and_data_protection.md  figure_generation_and_visual_qa.md  methods_reproducibility.md  zenodo_deposit_notes.md
outputs/: CLAIM_EVIDENCE_LEDGER.csv  FIGURE_MANIFEST.csv  FIGURE_VISUAL_QA.csv  analysis_dataset.csv  analysis_dataset_constructed.csv
scripts/: 00_validate_inputs.py  01_clean_data.py  02_construct_variables.py  03_descriptive_analysis.py  04_inferential_analysis.py  05_robustness_checks.py  06_generate_figures.py  07_generate_tables.py  08_reference_data_validation.py  10_generate_publication_figures.py  11_generate_optional_conceptual_figure.py  12_ecr_economic_evidence.py  repository_check.py  run_all.py  verify_sha256sums.py
tests/: test_figure_generation.py  test_input_schema.py  test_reproducibility.py  test_variable_construction.py
zenodo/: zenodo_metadata.json
(+41 files in other folders)
